--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,4 +1,3 @@
-<!-- templates/base.html -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="ru">
@@ -14,23 +13,19 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>
       {% block title %}
-      {{title}}
+      Последние обновления на сайте.
       {% endblock %}
     </title>
   </head>	
     <body>
-        <header>
-            {% include 'includes/header.html' %}
-        </header>
+        {% include 'includes/header.html' %}
       <main>
       <div class="container">
-      {% block content %}
-        {{text}}
-      {% endblock %}
+        {% block content %}
+
+        {% endblock %}
       </div>  
-    </main>
-    <footer>
-          {% include 'includes/footer.html' %}
-    </footer>
-  </body>
+      </main>
+        {% include 'includes/footer.html' %}
+    </body>
 </html>
