--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,20 +1,24 @@
 {% extends 'base.html' %}
 {% block title %} Последние обновление на сайте {% endblock %}
 {% block content %}
-      <h1> Последние обновления на сайте. </h1>
-        {% for post in posts %}
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }}
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:'d E Y' }}
-          </li>
-        </ul>
-        <p>{{ post.text }}</p>
-        {% if post.group %}
-        <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-        {% endif %}
-        {% if not forloop.last %}<hr>{% endif %}
+      <h1>
+        Последние обновления на сайте.
+      </h1>
+      {% for post in posts %}
+        <article>
+          <ul>
+            <li>
+              Автор: {{ post.author.get_full_name }}
+            </li>
+            <li>
+              Дата публикации: {{ post.pub_date|date:'d E Y' }}
+            </li>
+          </ul>
+        </article>
+      <p>{{ post.text|linebreaks }}</p>
+      {% if post.group %}
+        <a href="{% url 'posts:group_list' post.group.slug %}">все записи</a>
+      {% endif %}
+      {% if not forloop.last %}<hr>{% endif %}
       {% endfor %}
       {% endblock %}
