--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -4,21 +4,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="img/fav/fav.ico" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
+    <link rel="icon" href="{% static 'img/fav/fav.ico'%}" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/fav/apple-touch-icon.png'%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png'%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png'%}">
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>
       {% block title %}
-      Последние обновления на сайте.
+        Последние обновления на сайте.
       {% endblock %}
     </title>
   </head>	
     <body>
-        {% include 'includes/header.html' %}
+      {% include 'includes/header.html' %}
       <main>
       <div class="container">
         {% block content %}
@@ -26,6 +26,6 @@
         {% endblock %}
       </div>  
       </main>
-        {% include 'includes/footer.html' %}
+      {% include 'includes/footer.html' %}
     </body>
 </html>
