--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,23 +1,23 @@
 {% extends 'base.html' %}
 {% block title %} Записи сообщества блогеров. {% endblock %}
 {% block content %}
-    <h1>{{ group.title }}</h1>
-    <p>{{ group.description }}</p>
-      {% for post in posts %}  
-    <article>
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:'d E Y' }}
-        </li>
-      </ul>
-      <p>{{ post.text|linebreaks }}</p>
-    </article>
-      {% if post.group %}
-        <a href="{% url 'posts:group_list' post.group.slug %}">все записи</a>
-      {% endif %}
-      {% if not forloop.last %}<hr>{% endif %}
-{% endfor %}
+  <h1>{{ group.title }}</h1>
+  <p>{{ group.description|linebreaksbr }}</p>
+    {% for post in posts %}  
+  <article>
+    <ul>
+      <li>
+        Автор: {{ post.author.get_full_name }}
+      </li>
+      <li>
+        Дата публикации: {{ post.pub_date|date:'d E Y' }}
+      </li>
+    </ul>
+    <p>{{ post.text|linebreaksbr }}</p>
+  </article>
+  {% if post.group %}
+    <a href="{% url 'posts:group_list' post.group.slug %}">все записи</a>
+  {% endif %}
+  {% if not forloop.last %}<hr>{% endif %}
+  {% endfor %}
 {% endblock %}
